--- a/etc/confd/templates/swagger.yaml.tmpl
+++ b/etc/confd/templates/swagger.yaml.tmpl
@@ -178,9 +178,7 @@ paths:
               identity:
                 type: string
               properties:
-                type: array
-                items:
-                  type: object
+                type: object
       responses:
         '201':
           description: All properties for the identity have been created
@@ -878,6 +876,57 @@ paths:
               "quantity": $input.json('$.quantity'),
               "price": $input.json('$.price'),
               "purchased": $input.json('$.purchased')
+            }
+        responses:
+          201:
+            statusCode: "201"
+            responseTemplates:
+              application/json:
+          400:
+            statusCode: "400"
+            responseTemplates:
+              application/json:
+          403:
+            statusCode: "403"
+            responseTemplates:
+              application/json:
+          default:
+            statusCode: "201"
+            responseTemplates:
+              application/json:
+  /blocks/properties:
+    post:
+      description: |
+        Create or update block properties
+      parameters:
+        - name: body
+          in: body
+          required: true
+          schema:
+            properties:
+              id:
+                type: string
+              properties:
+                type: object
+      responses:
+        '201':
+          description: Block properties has been updated / created
+        '403':
+          description: Block update made by wrong user
+        '400':
+          description: Block not found
+      x-amazon-apigateway-auth:
+        type: aws_iam
+      x-amazon-apigateway-integration:
+        type: http
+        httpMethod: post
+        uri: {{getenv "HTTP_PROTOCOL"}}://blocks-api.{{getenv "HOSTED_ZONE"}}/properties
+        requestTemplates:
+          application/json: |
+            {
+              "identity": "$context.identity.cognitoIdentityId",
+              "id": $input.json('$.id'),
+              "properties": $input.json('$.properties')
             }
         responses:
           201:
